# AI4CellFate

./: README.md  requirements.txt  setup.py
notebooks/: AI4CellFate_workflow.ipynb  CellFate.ipynb  Codeless_AI4CellFate.ipynb  Codeless_AI4CellFate_Google_Colab.ipynb  data_labelling_study.ipynb  feature_importance.ipynb  latentspace_dimension_study.ipynb  manuscript.ipynb  tabular_bias_study.ipynb  temporal_study.ipynb
notebooks/manuscript/: Fig2A_non_engineered_latent_space.ipynb  Fig2B_latent_dim_interpret.ipynb  Fig2C_temporal_study.ipynb  Fig2D_data_labelling_study.ipynb  Fig2E_state_of_the_art_comparison.ipynb  Fig3C_perturbations_over_time.ipynb  Fig4_second_gen_study.ipynb  SI_ablation_studies.ipynb  SI_brightfield_data.ipynb  SI_discover_comparison.ipynb  (+14 more)
src/: ablation_studies.py  ai4cellfate.py  ai4cellfate_cv.py  cellfate.py  config.py  data_labelling_study.py  latent_dim.py  optimised_autoencoder.py  optimised_cellfate.py  pyproject.toml  temporal_study.py  utils.py
src/evaluation/: evaluate.py
src/manuscript/: ablation_studies.py  ai4cellfate_cv.py  data_labelling_study.py  latent_dim.py  model_optimization.py  tabular_hyperparameter_run.py  temporal_study.py
src/models/: __init__.py  autoencoders.py  classifier.py  decoder.py  discriminator.py  encoder.py  vae.py
src/preprocessing/: data_preprocessing.ipynb  preprocessing_functions.py
src/training/: cross_validation.py  hyperparameter_example.py  hyperparameter_optimization.py  loss_functions.py  new_optimised_train.py  optimisation_functions.py  optimised_train.py  train.py
