# src/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellfate"
version = "0.1.0"
description = "Example package"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { text="MIT" }
# If you want to limit which directories are scanned for packages:
# dynamic = ["classifiers", "dependencies"]

[tool.setuptools.packages.find]
where = ["."]
